--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_NAME=name_gender_dictionary
-DATABASE_DSN=root:123456@tcp(192.168.99.100:3306)
-TABLE_NAME=gender
+DATABASE_NAME=
+DATABASE_DSN=
+TABLE_NAME=
